# frost_day

./: .gitignore  README.md  config.py  pyproject.toml
data/validation/: Asnières-sur-Saône_01_complete.csv  Digne-les-Bains_04_complete.csv  Digne-les-Bains_04_weather_data.csv  Espinchal_63_complete.csv  Espinchal_63_weather_data.csv  Marseille_13_complete.csv  Marseille_13_weather_data.csv  Montfalcon_38_complete.csv  Paris_75_complete.csv  Paris_75_weather_data.csv  city_df_complete.csv  stations_df_1000.csv  stations_df_complete.csv
notebooks/: 01_exploration.ipynb  02_validation.ipynb
src/: app.py  download_data.py  etl.py  frost_calculator.py  geo_matching.py  test_geo.py
