[project]
name = "frost-day"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tqdm>=4.68.3",
]
